--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,4 +1,4 @@
-const path = require('path');
+const path = require('node:path');
 
 module.exports = {
   config: path.resolve('src', 'database', 'config', 'config.js'),
